@@ -2,6 +2,7 @@
 	* replaced dependency on boost.thread by asio's internal thread primitives
 	* added support for i2p torrents
 	* cleaned up usage of MAX_PATH and related macros
+	* made it possible to build libtorrent without RTTI support
 
 0.15 release
 
